dependencies {
    api project(':core-api')
    implementation project(':appchain-config')
    api project(':plugin-catalog')
    api project(':consensus')
    api project(':p2p')
    api libs.yaci.core
    api libs.yaci.helper
    api libs.project.reactor.core

    compileOnly libs.netty

    implementation libs.rocksdb

    // Logging dependencies
    implementation libs.slf4j.api
    implementation libs.slf4j.reload4j
    implementation libs.reload4j

    implementation libs.cardano.client.core
    implementation libs.cardano.client.crypto.ext
    // App-chain state commitment (Merkle Patricia Forestry, Aiken-compatible)
    implementation libs.cardano.client.mpf
    implementation libs.cardano.client.mpf.rocksdb
    // ADR-025 Phase 3: pinned classic radix-16 Blake2b-256 JMT core. Its
    // persistence SPI is implemented against this runtime's shared WriteBatch.
    implementation libs.cardano.client.jmt
    api project(':ledger-rules')
    api project(':ledger-state')
    implementation libs.jackson.databind

    // Script anchors (ADR 008.4): UPLC param application + script hashing for
    // the anchor artifacts (already shipped via ledger-rules' tx evaluator)...
    implementation libs.julc.cardano.client.lib
    // ...and the bundled julc-compiled anchor artifacts (resources only — the
    // validator classes are never loaded)
    runtimeOnly project(':appchain-anchor-onchain')
    // Anchor tx construction (Iteration 4, owner-requested): QuickTx balances
    // fees/collateral/change with additionalSignersCount for co-sign witnesses
    implementation libs.cardano.client.quicktx

    testImplementation libs.project.reactor.test
    testImplementation libs.netty

    // Generate @DomainEventListener bindings at build time
    annotationProcessor libs.yaci.events.processor
}

// Since ADR-025.2 Phase E the stdlib jar registers a domain-api ServiceLoader
// provider, and that contribution kind requires an owning bundle manifest
// from an embedded aggregate index. Generate the index over the test runtime
// classpath (dependency jars plus this module's own test providers, merged
// into one artifact) so catalog-opening tests see the same
// authoritative-input shape as packaged runtimes.
def generatedTestPluginCatalogDir =
        layout.buildDirectory.dir('generated/test-plugin-catalog')

tasks.register('testCatalogProvidersJar', Jar) {
    archiveClassifier = 'test-catalog-providers'
    destinationDirectory = layout.buildDirectory.dir('generated/test-plugin-catalog-jar')
    from sourceSets.test.output
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

tasks.register('generateTestPluginCatalogIndex', JavaExec) {
    dependsOn project(':plugin-catalog').tasks.named('classes'),
            tasks.named('testCatalogProvidersJar'), tasks.named('jar')
    inputs.files(configurations.testRuntimeClasspath)
    inputs.file(tasks.named('testCatalogProvidersJar').flatMap { it.archiveFile })
    inputs.file(tasks.named('jar').flatMap { it.archiveFile })
    outputs.file(generatedTestPluginCatalogDir.map {
        it.file('META-INF/yano-plugin-index-v1.json')
    })
    classpath = project(':plugin-catalog').sourceSets.main.runtimeClasspath
    mainClass = 'com.bloxbean.cardano.yano.catalog.PluginIndexGenerator'
    doFirst {
        def output = generatedTestPluginCatalogDir.get()
                .file('META-INF/yano-plugin-index-v1.json').asFile
        output.parentFile.mkdirs()
        def artifacts = configurations.testRuntimeClasspath.files
                .findAll { it.exists() && it.name.endsWith('.jar') }
                .sort { left, right -> left.absolutePath <=> right.absolutePath }
        def providersJar = tasks.named('testCatalogProvidersJar').get()
                .archiveFile.get().asFile
        def moduleJar = tasks.named('jar').get().archiveFile.get().asFile
        def arguments = ['--output', output.absolutePath, '--'] +
                artifacts.collect { it.absolutePath } +
                [moduleJar.absolutePath, providersJar.absolutePath]
        // Same Windows 32k command-line limit as :app:generatePluginCatalogIndex.
        def argumentsFile = new File(temporaryDir, 'test-plugin-index-args.txt')
        argumentsFile.parentFile.mkdirs()
        argumentsFile.setText(arguments.join('\n') + '\n', 'UTF-8')
        args = ['--args-file', argumentsFile.absolutePath]
    }
}

// Catalog-semantics tests build and inject their own catalog inputs
// (including explicit embedded indexes), so they must run WITHOUT the
// generated classpath index — an extra index is a hard cardinality error.
def catalogSemanticsTestClasses = [
        '**/plugins/PluginCatalogRuntimeTest.class',
        '**/plugins/PluginCatalogCollisionPolicyTest.class',
]

tasks.named('test') {
    dependsOn tasks.named('generateTestPluginCatalogIndex')
    classpath += files(generatedTestPluginCatalogDir)
    catalogSemanticsTestClasses.each { exclude it }
    doFirst {
        systemProperty 'yano.test.runtime-classpath', classpath.asPath
    }
}

tasks.register('pluginCatalogSemanticsTest', Test) {
    dependsOn ':utxo-output-index-example:jar'
    doFirst {
        systemProperty 'yano.test.utxo-index-example-jar', project(':utxo-output-index-example')
                .tasks.named('jar').get().archiveFile.get().asFile.absolutePath
    }
    group = 'verification'
    description = 'Catalog-semantics tests that manage their own catalog inputs (no embedded index)'
    useJUnitPlatform()
    jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED'
    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath
    catalogSemanticsTestClasses.each { include it }
}

tasks.named('check') {
    dependsOn tasks.named('pluginCatalogSemanticsTest')
}

tasks.register('benchmarkAdr025ClassicJmtRuntime', JavaExec) {
    group = 'verification'
    description = 'Runs the ADR-025 Phase 3 durable classic-JMT runtime benchmark'
    dependsOn tasks.named('testClasses')
    classpath = sourceSets.test.runtimeClasspath
    mainClass = 'com.bloxbean.cardano.yano.runtime.appchain.ClassicJmtRuntimeBenchmark'
    def report = layout.buildDirectory.file('reports/adr025/phase3-classic-jmt-runtime.json')
    args report.get().asFile.absolutePath,
            providers.gradleProperty('adr025RuntimeKeys').getOrElse('100000'),
            providers.gradleProperty('adr025RuntimeBatch').getOrElse('100'),
            providers.gradleProperty('adr025RuntimeProofs').getOrElse('128')
    outputs.file(report)
}

['Mpf': 'mpf-blake2b256-v1', 'Jmt': 'jmt-blake2b256-v1'].each { suffix, profile ->
    tasks.register("benchmarkAdr028AuthenticatedSnapshot${suffix}", JavaExec) {
        group = 'verification'
        description = "Runs the ADR-028 M8 ${profile} logical-snapshot benchmark"
        dependsOn tasks.named('testClasses')
        classpath = sourceSets.test.runtimeClasspath
        mainClass = 'com.bloxbean.cardano.yano.runtime.appchain.AuthenticatedSnapshotBenchmark'
        maxHeapSize = '6g'
        def report = rootProject.layout.projectDirectory.file(
                "adr/app-layer/benchmarks/028-m8-authenticated-snapshot-${suffix.toLowerCase()}.json")
        args report.asFile.absolutePath, profile,
                providers.gradleProperty('adr028SnapshotEntries').getOrElse('1300000'),
                providers.gradleProperty('adr028SnapshotProofs').getOrElse('4096'),
                providers.gradleProperty('adr028SnapshotClients').getOrElse('32')
        outputs.file(report)
    }
}

java {
    sourceCompatibility = 25
    targetCompatibility = 25
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            pom {
                name = 'Yano Runtime'
                description = 'Runtime implementation for Yano (A Cardano Node implementation in Java)'
            }
        }
    }
}

// Explicit invocation only; the destination must not exist. This is a synthetic
// index/storage spike, not a substitute for historical-chain sync measurements.
tasks.register('benchmarkWalletIndexes', JavaExec) {
    group = 'verification'
    description = 'Measures four optional-wallet-index modes on physically stored synthetic blocks'
    dependsOn tasks.named('testClasses')
    classpath = sourceSets.test.runtimeClasspath
    mainClass = 'com.bloxbean.cardano.yano.runtime.wallet.WalletIndexBenchmark'
    maxHeapSize = '1g'
    args providers.gradleProperty('walletBenchmarkDirectory').getOrElse('/private/tmp/yano-wallet-index-benchmark'),
            providers.gradleProperty('walletBenchmarkBlocks').getOrElse('1000000')
}

// Read-only source, fresh derived databases. Includes canonical body decode and UTxO
// processing, but not network/consensus/other ledger-store costs of full-node sync.
tasks.register('benchmarkWalletHistory', JavaExec) {
    group = 'verification'
    description = 'Replays retained historical blocks through the four wallet-index modes'
    dependsOn tasks.named('testClasses')
    classpath = sourceSets.test.runtimeClasspath
    mainClass = 'com.bloxbean.cardano.yano.runtime.wallet.WalletHistoricalBenchmark'
    maxHeapSize = '1g'
    args providers.gradleProperty('walletHistorySource').getOrElse(''),
            providers.gradleProperty('walletHistoryOutput').getOrElse(''),
            providers.gradleProperty('walletHistoryGenesis').getOrElse(''),
            providers.gradleProperty('walletHistoryBlocks').getOrElse('1000000')
}

// Exports a completed historical replay and real scan results for the raw-CBOR oracle.
tasks.register('verifyWalletHistory', JavaExec) {
    group = 'verification'
    dependsOn tasks.named('testClasses')
    classpath = sourceSets.test.runtimeClasspath
    mainClass = 'com.bloxbean.cardano.yano.runtime.wallet.WalletHistoricalVerifier'
    maxHeapSize = '1g'
    args providers.gradleProperty('walletVerifyDatabase').getOrElse(''),
            providers.gradleProperty('walletVerifyOutput').getOrElse('')
}
